# Engineering-Portfolio

./: README.md
Analog-Electronics/555-Timer-Circuits/: README.md
Analog-Electronics/OpAmp-Characteristics/: README.md
Digital-Design-RTL/FSM-Logic-Synthesis/: README.md
Digital-Design-RTL/FSM-Logic-Synthesis/src/: fsm.sv
Digital-Design-RTL/FSM-Logic-Synthesis/tb/: tb_fsm.sv
Digital-Design-RTL/Memory-Copier-DMA/: Makefile  README.md
Digital-Design-RTL/Memory-Copier-DMA/src/: copier.sv  data_register.sv  flex_counter.sv  memory.sv  memory_if.sv
Digital-Design-RTL/Memory-Copier-DMA/tb/: tb_copier.sv
Digital-Design-RTL/RISCV-Assembly/: CMakeLists.txt  README.md  link.ld
Digital-Design-RTL/RISCV-Assembly/src/: asmHello.S  main.c  popcnt.S
Digital-Design-RTL/System-Verilog-Basics/: Makefile
Digital-Design-RTL/System-Verilog-Basics/src/: counter.sv  eight_bit_adder.sv  full_adder.sv
Digital-Design-RTL/System-Verilog-Basics/tb/: tb_counter.sv  tb_eight_bit_adder.sv  tb_full_adder.sv
Embedded-Systems-Robotics/6DOF-Robotic-Arm/: README.md
Embedded-Systems-Robotics/Handwired-Keyboard/: README.md
Mechanical-Fabrication/3D-Printer-Rebuild/: IMG_2384.heic  README.md
Mechanical-Fabrication/Plastic-Filament-Recycler/: README.md
